Close #237: Replace setError with error events * replace setError/getError with sendEvent and default   Config::handleEvent implementation * FrameBufferObject, PixelBufferObject: ** remove setError/getError ** Incompatible return value change from bool to Error for FBO::init,    FBO::resize, PBO::setup * Internal error events have an arbitrary number of std::string appended * add handleEvents() in Config::init and Config::update

--- a/eq/server/CMakeLists.txt
+++ b/eq/server/CMakeLists.txt
@@ -139,6 +139,9 @@ if(HWSD_FOUND)
   endforeach()
 endif()
 
+list(SORT HEADERS)
+list(SORT SOURCES)
+
 add_library(EqualizerServer SHARED ${HEADERS} ${SOURCES})
 target_link_libraries(EqualizerServer ${SERVER_LIBRARIES})
 set_target_properties(EqualizerServer
