Move CHANGES file to markdown

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -2,5 +2,5 @@
 
 file(GLOB READMES . README*)
 install(FILES ${READMES} FAQ PLATFORMS RelNotes.md ../AUTHORS
-  ../CHANGES.txt ../ACKNOWLEDGEMENTS ../LGPL ../LICENSE.txt
+  ../CHANGES.md ../ACKNOWLEDGEMENTS ../LGPL ../LICENSE.txt
   DESTINATION share/Equalizer/doc COMPONENT doc)
