--- a/examples/eqPly/CMakeLists.txt
+++ b/examples/eqPly/CMakeLists.txt
@@ -113,7 +113,7 @@ foreach(PLY_FILE ${PLY_FILES})
     else()
       set(BIN_POSTFIX "32.bin")
     endif()
-    if(EQ_BIG_ENDIAN)
+    if(BIGENDIAN)
       set(BIN_POSTFIX "be${BIN_POSTFIX}")
     else()
       set(BIN_POSTFIX "le${BIN_POSTFIX}")
