Integrate new Buildyard bootstrap

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,10 @@
 
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 project(Equalizer)
+
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake)
-if(NOT BUILDYARD)
-  include(Buildyard)
+include(Buildyard)
+if(BUILDYARD_STOP)
   return()
 endif()
 
