--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ script:
  - mkdir Debug
  - cd Debug
  - cmake .. -DCI_BUILD_COMMIT=$TRAVIS_COMMIT -DCMAKE_BUILD_TYPE=Debug
- - env TRAVIS=1 make -j8 tests ARGS=-V
+ - env TRAVIS=1 make -j8 Equalizer-test ARGS=-V
  - mkdir ../Release
  - cd ../Release
  - cmake .. -DCI_BUILD_COMMIT=$TRAVIS_COMMIT -DCMAKE_BUILD_TYPE=Release
- - env TRAVIS=1 make -j8 tests ARGS=-V
+ - env TRAVIS=1 make -j8 Equalizer-test ARGS=-V
 before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq autoconf automake bison cmake flex freeglut3-dev git git-svn libavahi-compat-libdnssd-dev libavcodec-dev libavformat-dev libavutil-dev libboost-date-time-dev libboost-program-options-dev libboost-regex-dev libboost-serialization-dev libboost-system-dev libgl1-mesa-dev libglewmx1.6-dev libhwloc-dev libibverbs-dev libjpeg-turbo8-dev libopencv-dev libopenmpi-dev libopenscenegraph-dev libqt4-dev librdmacm-dev libspnav-dev libswscale-dev libturbojpeg libudt-dev libx11-dev libxmu-dev pkg-config subversion 
