--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ before_install:
  - sudo apt-get install -qq libboost-regex-dev || /bin/true
  - sudo apt-get install -qq libboost-serialization-dev || /bin/true
  - sudo apt-get install -qq libboost-system-dev || /bin/true
+ - sudo apt-get install -qq libboost-test-dev || /bin/true
  - sudo apt-get install -qq libgl1-mesa-dev || /bin/true
  - sudo apt-get install -qq libglewmx1.6-dev || /bin/true
  - sudo apt-get install -qq libhwloc-dev || /bin/true
