Update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ before_install:
  - sudo apt-get install -qq libavformat-dev || /bin/true
  - sudo apt-get install -qq libavutil-dev || /bin/true
  - sudo apt-get install -qq libboost-date-time-dev || /bin/true
+ - sudo apt-get install -qq libboost-filesystem-dev || /bin/true
  - sudo apt-get install -qq libboost-program-options-dev || /bin/true
  - sudo apt-get install -qq libboost-regex-dev || /bin/true
  - sudo apt-get install -qq libboost-serialization-dev || /bin/true
