--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -113,3 +113,4 @@ add_subdirectory(eqHello)
 add_subdirectory(eqPixelBench)
 add_subdirectory(eqPly)
 add_subdirectory(seqPly)
+add_subdirectory(plylib)
