CR #272 and assorted cleanups

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -82,7 +82,7 @@ function(EQ_ADD_EXAMPLE NAME)
     DESTINATION share/Equalizer/examples/${NAME} COMPONENT examples)
 endfunction(EQ_ADD_EXAMPLE NAME)
 
-include_directories(include)
+include_directories(include ${CMAKE_CURRENT_SOURCE_DIR})
 add_definitions(-DEQ_SYSTEM_INCLUDES) # get GL headers
 if(GLEW_MX_FOUND)
   include_directories(BEFORE SYSTEM ${GLEW_MX_INCLUDE_DIRS})
@@ -107,10 +107,10 @@ if(OPENSCENEGRAPH_FOUND)
   add_subdirectory(osgScaleViewer)
 endif()
 
+add_subdirectory(plylib)
 add_subdirectory(eVolve)
 add_subdirectory(eqAsync)
 add_subdirectory(eqHello)
 add_subdirectory(eqPixelBench)
 add_subdirectory(eqPly)
 add_subdirectory(seqPly)
-add_subdirectory(plylib)
