--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,43 @@ notifications:
     on_success: never
 language: cpp
 script:
- - git clone --depth 10 https://github.com/Eyescale/Buildyard.git
- - cd Buildyard
- - git clone --depth 10 https://github.com/Eyescale/config.git -b 2013.06 config.eyescale
- - env TRAVIS=1 make -j8 Equalizer-test ARGS=-V
+ - mkdir Debug
+ - cd Debug
+ - cmake .. -DCI_BUILD_COMMIT=$TRAVIS_COMMIT -DCMAKE_BUILD_TYPE=Debug -DTRAVIS=1
+ - env TRAVIS=1 make -j8 tests ARGS=-V
+ - mkdir ../Release
+ - cd ../Release
+ - cmake .. -DCI_BUILD_COMMIT=$TRAVIS_COMMIT -DCMAKE_BUILD_TYPE=Release -DTRAVIS=1
+ - env TRAVIS=1 make -j8 tests ARGS=-V
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq bison flex libavahi-compat-libdnssd-dev libboost-date-time-dev libboost-program-options-dev libboost-regex-dev libboost-serialization-dev libboost-system-dev libgl1-mesa-dev libglewmx1.6-dev libhwloc-dev libibverbs-dev libopencv-dev libopenscenegraph-dev libqt4-dev librdmacm-dev libspnav-dev libudt-dev libx11-dev 
+ - sudo apt-get install -qq autoconf || /bin/true
+ - sudo apt-get install -qq automake || /bin/true
+ - sudo apt-get install -qq bison || /bin/true
+ - sudo apt-get install -qq cmake || /bin/true
+ - sudo apt-get install -qq doxygen || /bin/true
+ - sudo apt-get install -qq flex || /bin/true
+ - sudo apt-get install -qq git || /bin/true
+ - sudo apt-get install -qq git-review || /bin/true
+ - sudo apt-get install -qq git-svn || /bin/true
+ - sudo apt-get install -qq lcov || /bin/true
+ - sudo apt-get install -qq libavahi-compat-libdnssd-dev || /bin/true
+ - sudo apt-get install -qq libboost-date-time-dev || /bin/true
+ - sudo apt-get install -qq libboost-program-options-dev || /bin/true
+ - sudo apt-get install -qq libboost-regex-dev || /bin/true
+ - sudo apt-get install -qq libboost-serialization-dev || /bin/true
+ - sudo apt-get install -qq libboost-system-dev || /bin/true
+ - sudo apt-get install -qq libgl1-mesa-dev || /bin/true
+ - sudo apt-get install -qq libglewmx1.6-dev || /bin/true
+ - sudo apt-get install -qq libhwloc-dev || /bin/true
+ - sudo apt-get install -qq libibverbs-dev || /bin/true
+ - sudo apt-get install -qq libopencv-dev || /bin/true
+ - sudo apt-get install -qq libopenscenegraph-dev || /bin/true
+ - sudo apt-get install -qq libqt4-dev || /bin/true
+ - sudo apt-get install -qq librdmacm-dev || /bin/true
+ - sudo apt-get install -qq libspnav-dev || /bin/true
+ - sudo apt-get install -qq libudt-dev || /bin/true
+ - sudo apt-get install -qq libx11-dev || /bin/true
+ - sudo apt-get install -qq ninja-build || /bin/true
+ - sudo apt-get install -qq pkg-config || /bin/true
+ - sudo apt-get install -qq subversion || /bin/true
