--- a/examples/triply/CMakeLists.txt
+++ b/examples/triply/CMakeLists.txt
@@ -2,16 +2,16 @@
 include(files.cmake)
 
 add_definitions(-DPLYLIB_SHARED)
-add_library(ply SHARED ${LIB_SOURCES} ${PUBLIC_HEADERS} ${LIB_HEADERS})
+add_library(triply SHARED ${LIB_SOURCES} ${PUBLIC_HEADERS} ${LIB_HEADERS})
 
-set_target_properties(ply
+set_target_properties(triply
   PROPERTIES VERSION ${VERSION} SOVERSION ${VERSION_ABI})
 
-target_link_libraries(ply ${COLLAGE_LIBRARIES} ${EQ_GL_LIBRARIES}
+target_link_libraries(triply ${COLLAGE_LIBRARIES} ${EQ_GL_LIBRARIES}
   ${GLEW_LIBRARY})
 
-install(FILES ${PUBLIC_HEADERS} DESTINATION include/ply COMPONENT dev)
-install(TARGETS ply
+install(FILES ${PUBLIC_HEADERS} DESTINATION include/triply COMPONENT dev)
+install(TARGETS triply
         ARCHIVE DESTINATION lib COMPONENT dev
         RUNTIME DESTINATION bin COMPONENT lib
         LIBRARY DESTINATION lib COMPONENT lib)
