--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,13 @@ script:
  - mkdir Debug
  - cd Debug
  - cmake .. -DCI_BUILD_COMMIT=$TRAVIS_COMMIT -DCMAKE_BUILD_TYPE=Debug -DTRAVIS=1
- - env TRAVIS=1 make -j8 tests ARGS=-V
+ - env TRAVIS=1 make -j2 cis ARGS=-V
  - mkdir ../Release
  - git status
  - git --no-pager diff
  - cd ../Release
  - cmake .. -DCI_BUILD_COMMIT=$TRAVIS_COMMIT -DCMAKE_BUILD_TYPE=Release -DTRAVIS=1
- - env TRAVIS=1 make -j8 tests ARGS=-V
+ - env TRAVIS=1 make -j2 cis ARGS=-V
  - git status
  - git --no-pager diff
 before_install:
@@ -48,6 +48,7 @@ before_install:
  - sudo apt-get install -qq libopencv-dev || /bin/true
  - sudo apt-get install -qq libopenmpi-dev || /bin/true
  - sudo apt-get install -qq libopenscenegraph-dev || /bin/true
+ - sudo apt-get install -qq libpoppler-dev || /bin/true
  - sudo apt-get install -qq libqt4-dev || /bin/true
  - sudo apt-get install -qq librdmacm-dev || /bin/true
  - sudo apt-get install -qq libspnav-dev || /bin/true
