Update gitexternals and fix more cppcheck warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,11 @@
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 project(Equalizer)
 
-list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake
-                              ${CMAKE_SOURCE_DIR}/CMake/common)
-include(.gitexternals)
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMake
+  ${CMAKE_CURRENT_SOURCE_DIR}/CMake/common)
+
+include(GitExternal)
+include(Common)
 
 include(Buildyard)
 if(BUILDYARD_STOP)
@@ -22,13 +24,17 @@ option(EQUALIZER_BUILD_2_0_API
 
 mark_as_advanced(EQUALIZER_INSTALL_SERVER_HEADERS)
 
-include(Revision)
+include(GitInfo)
 
 set(RELEASE_VERSION OFF) # OFF or 'Mm0' ABI version
 set(LAST_RELEASE 1.6.0)
 set(VERSION_MAJOR "1")
 set(VERSION_MINOR "7")
 set(VERSION_PATCH "2")
+
+set(COMMON_PROJECT_DOMAIN ch.eyescale)
+set(EQUALIZER_DESCRIPTION "Parallel rendering framework for the creation of
+                          parallel and scalable OpenGL and GPGPU applications.")
 
 if(RELEASE_VERSION)
   set(EQ_DEFINITIONS -DEQ_RELEASE)
@@ -44,7 +50,6 @@ else()
   list(APPEND FIND_PACKAGES_DEFINES EQ_1_0_API)
 endif()
 
-include(Common)
 include(GitTargets)
 include(configure)
 include(UpdateFile)
