Attempting to fix Travis build

--- a/eq/client/CMakeLists.txt
+++ b/eq/client/CMakeLists.txt
@@ -21,8 +21,9 @@ update_file(${CMAKE_CURRENT_SOURCE_DIR}/version.in.h
 
 add_definitions(-DEQ_PLUGIN_BUILD -DBOOST_PROGRAM_OPTIONS_DYN_LINK)
 
-set(EQ_LIBRARIES EqualizerFabric ${EQ_GL_LIBRARIES}
-  ${PTHREAD_LIBRARIES} ${Boost_PROGRAM_OPTIONS_LIBRARY} ${GLEW_LIBRARY})
+set(EQ_LIBRARIES EqualizerFabric ${EQ_GL_LIBRARIES} ${PTHREAD_LIBRARIES}
+  ${Boost_PROGRAM_OPTIONS_LIBRARY} ${Boost_FILESYSTEM_LIBRARY}
+  ${GLEW_LIBRARY})
 
 if(MAGELLAN_FOUND)
   include_directories(${MAGELLAN_INCLUDE_DIR})
